# project

./: .gitignore  LICENSE  README.md  default.nix  project.cabal  shell.nix
src/: Database.hs  Demo.hs  PrettyPrint.hs  Project.hs  Reporting.hs
