cabal-version:      2.4
name:               project
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:
maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib, Project, Demo, Database, Reporting, PrettyPrint

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0
      , containers
      , mtl
      , text
      , bytestring
      , stm
      , transformers
      , random
      , shell-conduit
    hs-source-dirs:   src
    ghc-options: -Wincomplete-patterns -Wall -Wcompat 
    default-language: Haskell2010

executable project
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0
      , project

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wincomplete-patterns -Wall -Wcompat -threaded -rtsopts -with-rtsopts=-N

test-suite project-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.1.0, project, QuickCheck, hspec, checkers,containers, mtl, text, bytestring, stm, transformers
